--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="my_primary">#5E35B1</color>
-    <color name="my_secondary">#673AB7</color>
+    <color name="my_primary">#00A0E8</color>
+    <color name="my_secondary">#070E0F</color>
+    <color name="card">#FFBEBE</color>
+    <color name="bg">#77C2CC</color>
 </resources>
