--- a/app/src/main/res/layout/activity_forgot_pass.xml
+++ b/app/src/main/res/layout/activity_forgot_pass.xml
@@ -30,12 +30,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="60dp" />
 
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/backicon" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="Forgot Password?"
-                android:textColor="@color/my_primary"
+                android:textColor="@color/txtbg"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
