--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ForgotPassActivity">
+    tools:context=".ResetPasswordActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -18,7 +18,6 @@
         android:layout_centerInParent="true"
         app:cardBackgroundColor="@color/bg"
         app:cardCornerRadius="45dp">
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -39,7 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Forgot Password?"
+                android:text="Reset Password"
                 android:textColor="@color/txtbg"
                 android:textSize="24sp"
                 android:textStyle="bold" />
@@ -49,7 +48,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:alpha="0.7"
-                android:text="Don't worry! It happens, Please enter your email address assossiated with your account."
+                android:text="Please enter your new password below."
                 android:textColor="@color/black" />
 
             <View
@@ -60,22 +59,37 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:alpha="0.7"
-                android:text="Email Address"
+                android:text="New Password"
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/editTextEmail"
+                android:id="@+id/editTextNewPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
                 android:drawableEnd="@drawable/done_icon"
-                android:inputType="textEmailAddress" />
+                android:inputType="textPassword" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:alpha="0.7"
+                android:text="Confirm New Password"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp" />
+
+            <EditText
+                android:id="@+id/editTextConfirmPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableEnd="@drawable/done_icon"
+                android:inputType="textPassword" />
 
             <com.google.android.material.button.MaterialButton
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginTop="20dp"
-                android:text="Send"
+                android:text="Reset"
                 android:textStyle="bold"
                 app:cornerRadius="32dp" />
 
@@ -98,7 +112,6 @@
                     android:alpha="0.7"
                     android:text="@string/login"
                     android:textColor="@color/my_primary"
-
                     android:textStyle="bold" />
             </LinearLayout>
 
